# Ergo

./: .gitignore  README.md  generate_executable.txt  main.py  main.qml  pyproject.toml
app/: main.py
app/backend/: apa7_form_handler.py  bibliography_manager.py  output_monitor.py  process_manager.py  project_manager.py  settings_manager.py  svg_item.py
app/templates/: README.md
app/templates/apa7/: README.md  form.qml
app/templates/apa7/structure/: form_data.json  main.typ
app/ui/: InitialView.qml  ProjectView.qml  main.qml
app/ui/components/: AddReferenceDialog.qml  DocumentStructurePanel.qml  ExportDialog.qml  NewProjectDialog.qml  OpenProjectDialog.qml  OutputPanel.qml  ProjectSettingsDialog.qml  ProjectSidebar.qml  RecentProjectsView.qml  SelectCitationDialog.qml
components/: OutputPanel.qml
