[build-system]
requires = ["setuptools>=80.9"]
build-backend = "setuptools.build_meta"

[project]
name = "Ergo"
version = "1.0.0"
authors = [
  { name="Ergo Group", email="todo@example.com" },
]
description = "A desktop application for document creation."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business",
]
dependencies = [
    "PySide6>=6.10",
]

[project.urls]
"Homepage" = "https://github.com/andmoreduro/Ergo"
"Bug Tracker" = "https://github.com/andmoreduro/Ergo/issues"

# This section defines the entry point for the application.
# When tools like PyInstaller build the project, or if it were installed
# via pip, this tells them that the main executable should run the 'main'
# function located in the 'main.py' file.
[project.gui-scripts]
ergo = "main:main"
