[build-system]
requires = ["setuptools>=80.9"]
build-backend = "setuptools.build_meta"

[project]
name = "Ergo"
version = "1.0.0"
authors = [
  { name="Ergo Group", email="todo@example.com" },
]
description = "A desktop application for document creation."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "GPL-3.0-only" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Windows",
    "Topic :: Office/Business",
]
dependencies = [
    "PySide6>=6.10",
]

[project.urls]
"Homepage" = "https://github.com/andmoreduro/Ergo"
"Bug Tracker" = "https://github.com/andmoreduro/Ergo/issues"

[tool.setuptools.packages.find]
where = ["app"]

# This section defines the entry point for the application.
# Run the 'main' function located in the 'main' module.
[project.gui-scripts]
ergo = "main:main"
